lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:27: error: ')' expected but 'else' found.
	else if(limiteGauche > getX() && limiteDroite() > getX()
        ^