lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = 
{
	var L = getSol()

	var limiteGauche = 0
	var limiteDroite = 0
	
	for(i <- 0 to L.length-2)
	{
		if(L(i)(1)==L(i+1)(1))
		{
			limiteGauche = L(i)(0)
			limiteDroite = L(i+1)(0)
		}
	}

	if(limiteGauche < getX() && limiteDroite() > getX())
	{
		if(getVitesseY()>(-9))
			setPousseeDesiree(3)
		else setPousseeDesiree(4)
	}
	else if(limiteGauche < getX() && limiteDroite() < getX()
	{
		setAngleDesire(90); setPousseeDesiree(3)
	}
	else if(limiteGauche > getX() && limiteDroite() > getX()
	{
		setAngleDesire(-90); setPousseeDesiree(3)
	}
}
